[BUGFIX] right align footer nav

--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -5,4 +5,9 @@
 		padding-block-start: 0;
 		padding-block-end: 0;
 	}
+	& .footer-menu {
+		align-content: flex-end;
+	}
 }
+
+
